spacing fixes, still working on the form
A footer will be added soon, making the social media links more accessible.

--- a/src/styles.css
+++ b/src/styles.css
@@ -779,6 +779,7 @@ a:hover {
     padding-top:2rem;
     justify-content: space-between;
     flex-direction: row;
+    
 
 }
   /* Style the container */
@@ -786,7 +787,7 @@ a:hover {
     border-radius: 0px;
     background-color: none;
     display:flex;
-    padding-right:16rem;
+    padding-right:10rem;
     padding-top:1rem;
    
   }
